Better docs. More knobs.

--- a/webcomponents/knob.html
+++ b/webcomponents/knob.html
@@ -6,13 +6,15 @@
     <style>
       @host {
         * {
-          cursor: pointer;
-          width: 64px;
-          height: 64px;
-          background-position-y: -64px;
-          position: relative;
           display: inline-block;
         }
+      }
+      #knob {
+        cursor: pointer;
+        width: 64px;
+        height: 64px;
+        background-position-y: -64px;
+        position: relative;
       }
       #value-tip {
         opacity: 0;
