--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Knob Example</title>
+    <title>[Polymer] WebAudio Knob Examples</title>
     <script src="js/polymer.min.js"></script>
-    <link rel="import" href="components/knob.html">
-    <script>
-    window.onload = function() {
-      // var knobs = document.querySelectorAll('webaudio-knob');
-      // for (var i = 0; i < knobs.length; i++) {
-      //   knobs[i].addEventListener('change', function(e) {
-      //     console.log(e);
-      //   })
-      // }
-    }
-    </script>
+    <link rel="import" href="webcomponents/knob.html">
+    <style>
+      body {
+        margin: 10px;
+        background-color: gray;
+        font-family: Helvetica;
+        font-size: 0.85em;
+      }
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+    </style>
   </head>
   <body style="background-color: gray;">
+    <header>
+      <h1>Polymer Web Audio Knob Elements</h1>
+      <p>These knobs are made using <a href="http://polymer-project.org/" target="_blank">Polymer</a> and <a href="http://www.w3.org/TR/components-intro/" target="_blank">WebComponents</a>. Checkout <a href="http://github.com/agektmr/webaudio-knob" target="_blank">source code</a>.</p>
+    </header>
     <webaudio-knob></webaudio-knob>
     <webaudio-knob src="img/knob_64_white1.png" value="0" range="29"></webaudio-knob>
     <webaudio-knob src="img/color_knob.png" value="0" range="29" diameter="46"></webaudio-knob>
     <webaudio-knob src="img/MS2000.png" value="0" range="100"></webaudio-knob>
     <webaudio-knob src="img/MiniBrute.png" value="0" min="-127" max="127" range="100"></webaudio-knob>
+    <webaudio-knob src="img/LittlePhatty.png" value="0" max="1024" step="10" range="100"></webaudio-knob>
+    <footer>
+      <hr>
+      <img src="img/webknobman.png" style="float:right;">
+      <p>Developed by <a href="http://google.com/+agektmr" target="_blank">Eiji Kitamura</a>. Knobs' design borrowed from <a href="http://www.g200kg.com/en/webknobman/gallery.php" target="_blank">WebKnobMan</a>.</p>
+      <ul style="font-size:0.85em;">
+        <li><a href="http://www.g200kg.com/en/webknobman/gallery.php?m=p&p=47" target="_blank">knob_64_white1.knob</a> by az © 2011 is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons CC-BY</a>.</li>
+        <li><a href="http://www.g200kg.com/en/webknobman/gallery.php?m=p&p=104" target="_blank">color_knob.knob</a> by az © 2012 is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons CC-BY</a>.</li>
+      </ul>
+    </footer>
   </body>
 </html>
