--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
   <body style="background-color: gray;">
     <header>
       <h1>Polymer Web Audio Knob Elements</h1>
+      <p>Try drag up and down these knobs.</p>
       <p>These knobs are made using <a href="http://polymer-project.org/" target="_blank">Polymer</a> and <a href="http://www.w3.org/TR/components-intro/" target="_blank">WebComponents</a>. Checkout <a href="http://github.com/agektmr/webaudio-knob" target="_blank">source code</a>.</p>
     </header>
     <webaudio-knob></webaudio-knob>
-    <webaudio-knob src="img/knob_64_white1.png" value="0" range="29"></webaudio-knob>
-    <webaudio-knob src="img/color_knob.png" value="0" range="29" diameter="46"></webaudio-knob>
-    <webaudio-knob src="img/MS2000.png" value="0" range="100"></webaudio-knob>
-    <webaudio-knob src="img/MiniBrute.png" value="0" min="-127" max="127" range="100"></webaudio-knob>
-    <webaudio-knob src="img/LittlePhatty.png" value="0" max="1024" step="10" range="100"></webaudio-knob>
+    <webaudio-knob src="img/knob_64_white1.png" value="0" splites="29"></webaudio-knob>
+    <webaudio-knob src="img/color_knob.png" value="0" splites="29" diameter="46"></webaudio-knob>
+    <webaudio-knob src="img/MS2000.png" value="0" splites="100"></webaudio-knob>
+    <webaudio-knob src="img/MiniBrute.png" value="0" min="-127" max="127" splites="100"></webaudio-knob>
+    <webaudio-knob src="img/LittlePhatty.png" value="0" max="1024" step="10" splites="100"></webaudio-knob>
     <footer>
       <hr>
-      <img src="img/webknobman.png" style="float:right;">
+      <a href="http://www.g200kg.com/en/webknobman/gallery.php" target="_blank"><img src="img/webknobman.png" style="float:right;"></a>
       <p>Developed by <a href="http://google.com/+agektmr" target="_blank">Eiji Kitamura</a>. Knobs' design borrowed from <a href="http://www.g200kg.com/en/webknobman/gallery.php" target="_blank">WebKnobMan</a>.</p>
       <ul style="font-size:0.85em;">
         <li><a href="http://www.g200kg.com/en/webknobman/gallery.php?m=p&p=47" target="_blank">knob_64_white1.knob</a> by az © 2011 is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons CC-BY</a>.</li>
