update polymer.js w/ some fix

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <p>These knobs are made using <a href="http://polymer-project.org/" target="_blank">Polymer</a> and <a href="http://www.w3.org/TR/components-intro/" target="_blank">WebComponents</a>. Checkout <a href="http://github.com/agektmr/webaudio-knob" target="_blank">source code</a>.</p>
     </header>
     <webaudio-knob></webaudio-knob>
-    <webaudio-knob src="img/knob_64_white1.png" value="0" splites="29"></webaudio-knob>
-    <webaudio-knob src="img/color_knob.png" value="0" splites="29" diameter="46"></webaudio-knob>
-    <webaudio-knob src="img/MS2000.png" value="0" splites="100"></webaudio-knob>
-    <webaudio-knob src="img/MiniBrute.png" value="0" min="-127" max="127" splites="100"></webaudio-knob>
-    <webaudio-knob src="img/LittlePhatty.png" value="0" max="1024" step="10" splites="100"></webaudio-knob>
+    <webaudio-knob src="img/knob_64_white1.png" value="0" sprites="29"></webaudio-knob>
+    <webaudio-knob src="img/color_knob.png" value="0" sprites="29" diameter="46"></webaudio-knob>
+    <webaudio-knob src="img/MS2000.png" value="0" sprites="100"></webaudio-knob>
+    <webaudio-knob src="img/MiniBrute.png" value="0" min="-127" max="127" sprites="100"></webaudio-knob>
+    <webaudio-knob src="img/LittlePhatty.png" value="0" max="1024" step="10" sprites="100"></webaudio-knob>
     <footer>
       <hr>
       <a href="http://www.g200kg.com/en/webknobman/gallery.php" target="_blank"><img src="img/webknobman.png" style="float:right;"></a>
