knob: add attributeChanged method
So you can set the initial value of the knob using databinding.

--- a/webcomponents/knob.html
+++ b/webcomponents/knob.html
@@ -64,6 +64,11 @@
           this.$['knob'].style.background = 'url('+this.src+')';
           update.bind(this)(this.value);
         },
+        attributeChanged: function(attrName, oldVal, newVal) {
+          if (attrName == 'value') {
+            update.bind(this)(newVal);
+          }
+        },       
         value:      0,
         min:        0,
         max:        127,
