knob: use valueChanged instead of attributeChanged

--- a/webcomponents/knob.html
+++ b/webcomponents/knob.html
@@ -64,10 +64,8 @@
           this.$['knob'].style.background = 'url('+this.src+')';
           update.bind(this)(this.value);
         },
-        attributeChanged: function(attrName, oldVal, newVal) {
-          if (attrName == 'value') {
-            update.bind(this)(newVal);
-          }
+        valueChanged: function(oldVal, newVal) {
+          update.bind(this)(newVal);
         },       
         value:      0,
         min:        0,
